components/sfk6jn5nx-python/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: sfk6jn5nx-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: sfk6jn5nx-python 
  name: sfk6jn5nx-python
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: sfk6jn5nx-python
