components/sfk6jn5nx-python/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: sfk6jn5nx-python
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: sfk6jn5nx-python 
  name: sfk6jn5nx-python
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sfk6jn5nx-python
    weight: 100
